[package]
name = "proxylab-handout"
version = "0.1.0"
authors = ["Bryan Dixon <javawolfpack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = "0.4.19"